<resources>
    <string name="app_name">onTime-Travellers</string>
    <string name="server">192.168.0.101:80</string>
    <string name="actionbar_title">OnTime</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Don\'t Have An Account? Register</string>
    <string name="email_lbl">Email</string>
    <string name="password_lbl">Password</string>
    <string name="error_400">Invalid input: Email/Password cannot be empty</string>
    <string name="error_400_register">Bad Request</string>
    <string name="time_out">Connection Timeout</string>
    <string name="register">Register</string>
    <string name="mandatory">All fields are mandatory</string>
    <string name="username_lbl">Username</string>
    <string name="credit_card">Credit Card</string>
    <string name="nr_lbl">Number</string>
    <string name="card_name">Name</string>
    <string name="account">Create new account</string>
    <string name="confirm_password">Confirm</string>
    <string name="password_err">Password fields do not match</string>
    <string name="email_repeat_err">Email already registered in another account</string>
    <string name="creditnr_err">Invalid credit card number</string>
    <string name="email_err">Invalid email</string>
    <string name="title_activity_ontime">onTime</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="train">Train</string>
    <string name="buy">Purchase</string>
    <string-array name="stations">
        <item>Sao Bento</item>
        <item>Gaia</item>
        <item>Aveiro</item>
        <item>Coimbra</item>
        <item>Oriente</item>
        <item>Santa Apolonia</item>
    </string-array>
    <string-array name="trainsP">
        <item>P1</item>
        <item>P2</item>
        <item>P3</item>
        <item>P4</item>
    </string-array>
    <string-array name="trainsL">
        <item>L1</item>
        <item>L2</item>
        <item>L3</item>
        <item>L4</item>
    </string-array>

</resources>
