<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.holykael.ontime_travellers.loginActivity">
    <include layout="@layout/actionbar_layout" />

    <TextView
        android:id="@+id/account_lbl"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/account" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email_lbl" />

        <EditText
            android:id="@+id/email"
            android:layout_width="228dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/username_lbl"
        android:layout_width="70dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/username_lbl" />

    <EditText
        android:id="@+id/username"
        android:layout_width="228dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/password_lbl"
        android:layout_width="70dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/password_lbl" />

    <EditText
        android:id="@+id/password"
        android:layout_width="228dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    </LinearLayout>




    <TextView
        android:id="@+id/card_lbl"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/credit_card" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/creditcards" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nr_lbl"
            android:layout_width="70dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/nr_lbl" />

        <EditText
            android:id="@+id/card_nr"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/name_lbl"
            android:layout_width="70dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/card_name" />

        <EditText
            android:id="@+id/card_name"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>
    <TextView
        android:id="@+id/credit_validity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/mandatory"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:onClick="Register"
        android:text="@string/register"
        android:textColor="@color/fontButton" />

</LinearLayout>
</ScrollView>